# rs-sc

./: .gitignore  LICENSE  README.md  test_canvas_preprocess.mjs
.github/workflows/: ci.yml  release.yml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  capture_window.rs  error.rs  llm_translate.rs  main.rs  models.rs  settings.rs
ui/: index.html  ink.html  ink.js  result.html  result.js  settings.html  settings.js  styles.css
