[package]
name = "rs-sc"
version = "0.1.0"
edition = "2021"
description = "Rust Screen Capture — hotkey-driven box-select + multimodal AI translation"
authors = ["ZHLX2005"]
license = "MIT"
repository = "https://github.com/ZHLX2005/rs-sc"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "rustls-tls"] }
screenshots = "0.8"
softbuffer = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
winit = { version = "0.30", features = ["rwh_06"] }

[features]
default = []

[profile.dev.package.screenshots]
opt-level = 2

[profile.dev.package.image]
opt-level = 2

[profile.dev.package.softbuffer]
opt-level = 2

[profile.dev.package.winit]
opt-level = 2
